refactor: 예제 파일명이 피터팬에서 정의한 컨벤션에 맞지 않는 문제
케밥케이스에서 카멜 케이스로 변경

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,11 +3,11 @@
     "noImplicitAny": false,
     "removeComments": false,
     "moduleResolution": "node",
-    "module": "esnext",
+    "module": "CommonJS",
     "target": "es6",
     "allowJs": true,
     "sourceMap": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "locale": "ko",
     "pretty": true,
     "strictNullChecks": true,
