--- a/package/core/tsconfig.json
+++ b/package/core/tsconfig.json
@@ -7,6 +7,7 @@
     "rootDir": ".",
     "outDir": "build/",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "typeRoots": ["node_modules/@types"]
   }
 }
