--- a/package/data/tsconfig.json
+++ b/package/data/tsconfig.json
@@ -1,28 +1,29 @@
 {
-    "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.base.json",
 
-    "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts"],
 
-    "exclude": ["node_modules"],
+  "exclude": ["node_modules"],
 
-    "compilerOptions": {
-        "baseUrl": ".",
-        "rootDir": ".",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "rootDir": ".",
 
-        "module": "ES2020",
-        "target": "ES2020",
-        "moduleResolution": "node",
+    "module": "ES2020",
+    "target": "ES2020",
+    "moduleResolution": "node",
 
-        "outDir": "build/",
+    "outDir": "build/",
 
-        "declaration": true,
-        "declarationMap": true,
-        "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "typeRoots": ["node_modules/@types"],
 
-        "plugins": [
-            {
-                "name": "@rollup/plugin-typescript"
-            }
-        ]
-    }
+    "plugins": [
+      {
+        "name": "@rollup/plugin-typescript"
+      }
+    ]
+  }
 }
