fix: 이미지 import시 정의되어있지 않다고 하는 문제
d.ts파일 추가

--- a/app/presentation/project.json
+++ b/app/presentation/project.json
@@ -1,5 +1,6 @@
 {
-  "root": "package/presentation/",
-  "sourceRoot": "package/presentation/src",
-  "projectType": "library"
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "root": "app/presentation/",
+  "sourceRoot": "app/presentation/src",
+  "projectType": "application"
 }
