--- a/app/presentation-react/package.json
+++ b/app/presentation-react/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.local.js",
     "build:dev": "webpack --config config/webpack.dev.js",
-    "build:prod": "webpack --config config/webpack.prod.js",
+    "build": "webpack --config config/webpack.prod.js",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
@@ -61,7 +61,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
-    "mini-css-extract-plugin": "^2.6.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
