--- a/app/presentation-react/tsconfig.json
+++ b/app/presentation-react/tsconfig.json
@@ -1,16 +1,15 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["src/**/*.ts", "src/router/index.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "dist", "build"],
   "compilerOptions": {
+    "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
+      "@/*": ["src/*"]
     },
     "outDir": "./build",
     "jsx": "react-jsx",
-    "typeRoots": ["./types", "node_modules/@types"],
-    "types": ["reflect-metadata"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   }
