--- a/package/di/project.json
+++ b/package/di/project.json
@@ -1,5 +1,16 @@
 {
   "root": "package/di/",
   "sourceRoot": "package/di/src",
-  "projectType": "library"
+  "projectType": "library",
+  "targets": {
+    "lint": {
+      "executor": "@nrwl/linter:eslint",
+      "options": {
+        "fix": true,
+        "cache": true,
+        "eslintConfig": "package/di/.eslintrc.json",
+        "lintFilePatterns": ["package/di/**/*.ts"]
+      }
+    }
+  }
 }
