--- a/app/presentation-react/.eslintrc.json
+++ b/app/presentation-react/.eslintrc.json
@@ -1,6 +1,6 @@
 {
+  "root": false,
   "extends": ["plugin:@nrwl/nx/react", "../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
