--- a/app/presentation-react/package.json
+++ b/app/presentation-react/package.json
@@ -50,31 +50,9 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "babel-jest": "^28.1.0",
-    "babel-loader": "^8.2.5",
-    "circular-dependency-plugin": "^5.2.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.11",
-    "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "resolve-url-loader": "^5.0.0",
-    "sass": "^1.52.1",
-    "sass-loader": "^13.0.0",
-    "source-map-loader": "^3.0.1",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "^28.0.2",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.6.4",
-    "webpack": "^5.72.1",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0",
-    "webpack-merge": "^5.8.0"
+    "ts-jest": "^28.0.2"
   }
 }
