--- a/package/data/.eslintrc.json
+++ b/package/data/.eslintrc.json
@@ -1,6 +1,6 @@
 {
+  "root": false,
   "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*"],
   "overrides": [
     {
       "files": ["*.ts", "*.js"],
