--- a/app/presentation-react/package.json
+++ b/app/presentation-react/package.json
@@ -32,8 +32,8 @@
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.3",
     "reflect-metadata": "^0.1.13",
-    "core": "*",
-    "di": "*"
+    "@peterpan/core": "*",
+    "@peterpan/di": "*"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
