--- a/app/presentation/package.json
+++ b/app/presentation/package.json
@@ -23,8 +23,8 @@
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4",
-        "core": "*",
-        "di": "*"
+        "@peterpan/core": "*",
+        "@peterpan/di": "*"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^14.0.1",
