--- a/package/data/package.json
+++ b/package/data/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "data",
+    "name": "@peterpan/data",
     "version": "1.0.0",
     "scripts": {
         "build": "tsc --project tsconfig.build.json && npm run rollup",
@@ -10,7 +10,7 @@
     },
     "license": "ISC",
     "dependencies": {
-        "core": "*"
+        "@peterpan/core": "*"
     },
     "devDependencies": {
         "@rollup/plugin-typescript": "^8.3.3",
