--- a/app/presentation-react/.eslintrc.json
+++ b/app/presentation-react/.eslintrc.json
@@ -1,20 +1,12 @@
 {
   "root": false,
-  "extends": ["plugin:@nrwl/nx/react", "../../.eslintrc.json"],
+  "extends": ["../../.eslintrc.json"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
         "project": ["tsconfig.*?.json"]
-      },
-      "rules": {
-        "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn",
-        "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
-        "no-alert": "off"
-      },
-      "plugins": ["react", "react-hooks"],
-      "extends": ["plugin:react/recommended", "plugin:react-hooks/recommended"]
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
