--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,28 +1,30 @@
 {
   "compilerOptions": {
-    "noImplicitAny": false,
-    "removeComments": false,
-    "moduleResolution": "node",
-    "module": "CommonJS",
-    "target": "es6",
-    "allowJs": true,
-    "sourceMap": true,
-    "isolatedModules": false,
-    "locale": "ko",
-    "pretty": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": false,
-    "allowUnreachableCode": false,
-    "allowSyntheticDefaultImports": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "strict": true,
-    "typeRoots": ["node_modules/@types"],
     "rootDir": ".",
+    "noUnusedLocals": true,
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "target": "es2015",
+    "module": "esnext",
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-      "@peterpan/app/ng": ["app/presentation/src/main.ts"],
-      "@peterpan/app/react": ["app/presentation-react/src/index.tsx"]
+      "@peterpan/core": ["package/core/src/index.ts"],
+      "@peterpan/data": ["package/data/src/index.ts"],
+      "@peterpan/di": ["package/di/src/index.ts"],
+      // 각 프로젝트 src path alias
+      "@core/*": ["package/core/src/*"],
+      "@data/*": ["package/data/src/*"],
+      "@di/*": ["package/di/src/*"],
+      "@reactExample/*": ["app/presentation-react/src/*"]
     }
   },
   "exclude": ["node_modules", "dist", "build"]
