--- a/app/presentation-react/.babelrc
+++ b/app/presentation-react/.babelrc
@@ -1,16 +1,12 @@
 {
   "presets": [
-    "@babel/preset-react",
     [
-      "@babel/preset-env",
+      "@nrwl/react/babel",
       {
-        "targets": { "chrome": "58", "ie": "11" },
-        "modules": false,
-        "useBuiltIns": "usage",
-        "corejs": 3
+        "runtime": "automatic",
+        "useBuiltIns": "usage"
       }
-    ],
-    "@babel/preset-typescript"
+    ]
   ],
   "plugins": [
     ["@babel/plugin-transform-runtime", { "corejs": 3 }],
