--- a/app/presentation/tsconfig.json
+++ b/app/presentation/tsconfig.json
@@ -1,10 +1,10 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
+    "extends": "../../tsconfig.base.json",
     "include": ["src/**/*.ts"],
 
     "compileOnSave": false,
     "compilerOptions": {
-        "baseUrl": "./",
         "outDir": "./dist/out-tsc",
         "forceConsistentCasingInFileNames": true,
         "strict": true,
