--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
     "packages": ["package/*", "app/*"],
     "useNx": true,
-    "version": "0.0.0"
+    "version": "0.0.0",
+    "npmClient": "npm"
 }
