--- a/package.json
+++ b/package.json
@@ -1,47 +1,64 @@
 {
   "name": "peterpan",
-  "description": "두꺼비세상(피터팬의좋은방구하기) 모노레포",
+  "description": "두꺼비세상(피터팬의 좋은방 구하기) 모노레포",
   "license": "ISC",
   "author": "Duse",
+  "private": true,
   "engines": {
     "node": ">= 16.15.0"
   },
   "scripts": {
-    "prestart": "npm install && lerna bootstrap",
-    "start": "lerna run start",
+    "prestart": "npm install && npm run bootstrap",
+    "start": "nx run-many --target=serve --configuration=dev",
     "test": "lerna run test",
     "build": "lerna run build",
-    "graph": "nx graph"
+    "graph": "nx graph",
+    "bootstrap": "lerna bootstrap"
   },
   "devDependencies": {
-    "@nrwl/eslint-plugin-nx": "^14.5.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@nrwl/eslint-plugin-nx": "^14.5.10",
+    "@nrwl/node": "^14.5.10",
+    "@nrwl/react": "^14.5.10",
+    "@nrwl/web": "^14.5.10",
+    "@nrwl/workspace": "^14.5.10",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/eslint": "^8.4.6",
+    "@types/jest": "^28.1.8",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
-    "babel-loader": "^8.2.5",
-    "circular-dependency-plugin": "^5.2.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
+    "babel-jest": "^28.1.3",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "html-webpack-plugin": "^5.5.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^29.0.1",
     "lerna": "^5.1.8",
-    "mini-css-extract-plugin": "^2.6.1",
-    "nx": "^14.4.3",
+    "nx": "^14.5.10",
     "prettier": "^2.7.1",
-    "resolve-url-loader": "^5.0.0",
-    "sass": "^1.54.5",
-    "sass-loader": "^13.0.2",
-    "source-map-loader": "^4.0.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.0",
-    "webpack-merge": "^5.8.0"
+    "ts-jest": "^28.0.8",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.18.9",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "core-js": "^3.25.0",
+    "identity-obj-proxy": "^3.0.0",
+    "inversify": "^6.0.1",
+    "inversify-react": "^1.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
