--- a/package/data/project.json
+++ b/package/data/project.json
@@ -2,6 +2,7 @@
   "root": "package/data/",
   "sourceRoot": "package/data/src",
   "projectType": "library",
+  "prefix": "peterpan",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
@@ -12,5 +13,6 @@
         "lintFilePatterns": ["package/data/**/*.ts"]
       }
     }
-  }
+  },
+  "tags": ["core:data"]
 }
