chore: prettier 설정 업데이트

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,15 @@
 {
-  "singleQuote": true,
-  "semi": true,
-  "useTabs": false,
-  "tabWidth": 2,
-  "trailingComma": "all",
   "printWidth": 120,
-  "arrowParens": "always"
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "quoteProps": "preserve",
+  "jsxSingleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always",
+  "requirePragma": false,
+  "singleAttributePerLine": true
 }
