chore: lint 스크립트 추가 + 린트도 캐시하도록 Nx 설정 추가

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">= 16.15.0"
   },
   "scripts": {
+    "lint": "nx run-many --target=lint",
     "prestart": "npm install && npm run bootstrap",
     "start": "nx run-many --target=serve --configuration=dev",
     "test": "nx run-many --target=test",
