--- a/.prettierrc
+++ b/.prettierrc
@@ -10,6 +10,5 @@
   "bracketSpacing": true,
   "bracketSameLine": false,
   "arrowParens": "always",
-  "requirePragma": false,
-  "singleAttributePerLine": true
+  "requirePragma": false
 }
