--- a/package/core/domain/.eslintrc.json
+++ b/package/core/domain/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "root": false,
-  "extends": ["../../.eslintrc.json"],
+  "extends": ["../../../.eslintrc.json"],
   "overrides": [
     {
       "files": ["*.ts", "*.js"],
