--- a/package/core/domain/project.json
+++ b/package/core/domain/project.json
@@ -1,5 +1,5 @@
 {
-  "sourceRoot": "package/core/src",
+  "sourceRoot": "package/core/domain/src",
   "projectType": "library",
   "prefix": "peterpan",
   "targets": {
@@ -8,10 +8,10 @@
       "options": {
         "fix": true,
         "cache": true,
-        "eslintConfig": "package/core/.eslintrc.json",
-        "lintFilePatterns": ["package/core/**/*.ts"]
+        "eslintConfig": "package/core/domain/.eslintrc.json",
+        "lintFilePatterns": ["package/core/domain/**/*.ts"]
       }
     }
   },
-  "tags": ["core:core"]
+  "tags": ["core:domain"]
 }
