refactor: 라이브러리 계층 수정

--- a/package/shared/core/data/tsconfig.json
+++ b/package/shared/core/data/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../../../tsconfig.base.json",
 
   "include": ["src/**/*.ts"],
 
@@ -15,6 +15,6 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "typeRoots": ["node_modules/@types"],
+    "typeRoots": ["node_modules/@types"]
   }
 }
