--- a/package/shared/core/di/tsconfig.json
+++ b/package/shared/core/di/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../../../tsconfig.base.json",
 
   "include": ["src/**/*.ts"],
 
@@ -8,6 +8,6 @@
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
+    "sourceMap": true
   }
 }
