--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-    "packages": ["package/*", "app/*"],
+    "packages": ["library/*", "application/*"],
     "useNx": true,
     "version": "0.0.0",
     "npmClient": "npm"
