refactor: data 계층 repository로 이름 변경

--- a/nx.json
+++ b/nx.json
@@ -29,5 +29,12 @@
   },
   "cli": {
     "packageManager": "npm"
+  },
+  "generators": {
+    "@nrwl/react": {
+      "application": {
+        "babel": true
+      }
+    }
   }
 }
