--- a/package.json
+++ b/package.json
@@ -43,13 +43,17 @@
     "babel-jest": "^28.1.3",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.0.1",
     "lerna": "^5.1.8",
     "nx": "^14.5.10",
     "prettier": "^2.7.1",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "^28.0.8",
     "ts-node": "10.9.1",
     "typescript": "^4.7.4",
@@ -67,6 +71,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   }
 }
