refactor: application과 library의 역할 구분

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,22 @@
                 "onlyDependOnLibsWithTags": ["core:domain", "core:data", "core:di"]
               },
               {
+                "sourceTag": "type:feature",
+                "onlyDependOnLibsWithTags": ["*"]
+              },
+              {
+                "sourceTag": "type:ui",
+                "onlyDependOnLibsWithTags": ["type:ui", "type:util"]
+              },
+              {
+                "sourceTag": "type:util",
+                "onlyDependOnLibsWithTags": ["type:util"]
+              },
+              {
+                "sourceTag": "type:data-access",
+                "onlyDependOnLibsWithTags": ["type:data-access", "type:util", "core:di"]
+              },
+              {
                 "sourceTag": "*",
                 "onlyDependOnLibsWithTags": ["*"]
               }
