--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,8 +17,11 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-      "@peterpan/designSystem": ["library/design/peterpan-design-system/src/index.ts"],
-      "@peterpan/designToken": ["library/design/peterpan-design-token/src/index.ts"],
+      "@peterpan/react-example-ui-counter-card": ["library/react-example/ui/counter-card/src/index.ts"],
+      "@peterpan/react-example/constant": ["library/react-example/constant/src/index.ts"],
+      "@peterpan/react-example/data-access": ["library/react-example/data-access/src/index.ts"],
+      "@peterpan/react-example/feature/counter-list": ["library/react-example/feature/counter-list/src/index.ts"],
+      "@peterpan/react-example/feature/start": ["library/react-example/feature/start/src/index.ts"],
       "@peterpan/shared-core-di": ["library/shared/core/di/src/index.ts"],
       "@peterpan/shared-core-domain": ["library/shared/core/domain/src/index.ts"],
       "@peterpan/shared-core-repository": ["library/shared/core/repository/src/index.ts"],
