--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@nrwl/devkit": "14.7.13",
     "@nrwl/eslint-plugin-nx": "^14.7.5",
     "@nrwl/jest": "14.7.5",
     "@nrwl/js": "14.7.5",
@@ -29,6 +30,9 @@
     "@nrwl/react": "^14.7.5",
     "@nrwl/web": "^14.7.5",
     "@nrwl/workspace": "^14.7.5",
+    "@swc-node/register": "^1.4.2",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.2.173",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -50,6 +54,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "jsonc-eslint-parser": "^2.1.0",
     "lerna": "^5.5.1",
     "nx": "^14.7.5",
     "prettier": "^2.7.1",
@@ -61,6 +66,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.19.0",
+    "@nrwl/nx-plugin": "^14.7.13",
+    "@swc/helpers": "~0.3.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.25.1",
